--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,10 @@
   color:#444545
 }
 
-.App {
+/* .App {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
   background:#fe8b83 ;
-}
+} */
