--- a/src/scss/account/_login.scss
+++ b/src/scss/account/_login.scss
@@ -1,3 +1,9 @@
+.app{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: $primary-color;
 .login_container{
     display: flex;
     flex-direction: column;
@@ -21,11 +27,11 @@
         // justify-content: center;
         width: 300px;
         .item{
-            display: flex;
             margin-bottom: 10px;
             .title{
                 margin: 0;
                 margin-right: 10px;
+                text-align: start;
             }
             input{
                 outline: none;
@@ -77,4 +83,5 @@
         flex-direction: column;
         align-items: center;
     }
+}
 }
