--- a/src/scss/account/_regist.scss
+++ b/src/scss/account/_regist.scss
@@ -1,3 +1,9 @@
+.app{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: $primary-color;
 .regist_container{
     display: flex;
     flex-direction: column;
@@ -19,10 +25,12 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        // justify-content: center;
-        width: 300px;
+        padding: 0 10px;
+        width: 280px;
         .item{
             display: flex;
+            width: 100%;
+            justify-content: space-between;
             margin-bottom: 10px;
             .title{
                 margin: 0;
@@ -38,15 +46,6 @@
                 padding: 5px;
             }
         }
-        .reset_btn{
-            color: $primary-color;
-            font-weight: 600;
-            border: none;
-            cursor: pointer;
-            text-decoration: underline;
-            background-color: transparent;
-
-        }
         .btn{
             width: 50%;
             margin-top: 20px;
@@ -61,14 +60,11 @@
             }
         }
     }
-    .registPwd{
-        display: flex;
-        padding: 20px 10px;
-        font-size: 14px;
-        .btn{
+    .login_btn{
             color: $primary-color;
             font-weight: 600;
             border: none;
+            margin-top: 20px;
             cursor: pointer;
             background-color: transparent;
         }
@@ -78,5 +74,5 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-    }
+}
 }
