--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,6 @@
   color:#444545
 }
 
-/* .App {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background:#fe8b83 ;
-} */
+.App {
+  margin-bottom: 50px;
+} 
