--- a/src/scss/account/_login.scss
+++ b/src/scss/account/_login.scss
@@ -4,6 +4,11 @@
     align-items: center;
     height: 100vh;
     background-color: $primary-color;
+    svg{
+        path{
+            fill: green;
+        }
+    }
 .login_container{
     display: flex;
     flex-direction: column;
@@ -83,5 +88,5 @@
         flex-direction: column;
         align-items: center;
     }
-}
+    }
 }
