--- a/src/scss/all.css
+++ b/src/scss/all.css
@@ -5,6 +5,9 @@
   height: 100vh;
   background-color: #fe8b83;
 }
+.app svg path {
+  fill: green;
+}
 .app .login_container {
   display: flex;
   flex-direction: column;
@@ -270,6 +273,7 @@
 
 .foryou_box {
   padding: 20px;
+  margin-bottom: 50px;
 }
 .foryou_box .title {
   font-size: 18px;
