--- a/src/scss/all.scss
+++ b/src/scss/all.scss
@@ -2,6 +2,7 @@
 
 @import "./account/login";
 @import "./account/regist";
+@import "./account/profile";
 
 @import "./recipe/header";
 @import "./navbar";
